# gcp-full-data-cycle

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.app  Dockerfile.predict  Dockerfile.training  pipeline.py  predict.py  pyproject.toml  render.yaml  start.sh  train.py
.github/workflows/: keep-alive.yml  pipeline.yml  predict.yml  train.yml
adapters/: __init__.py  config.py  llm.py  model_registry.py  warehouse.py
app/: api.py  dashboard.py  pnl.py  positions.py
docs/superpowers/plans/: 2026-06-29-03-silver-layer.md  2026-06-29-04-gold-layer.md  2026-06-30-07-open-source-migration.md
docs/superpowers/specs/: 2026-06-29-gold-layer-design.md  2026-06-29-silver-layer-design.md  2026-06-30-ml-training-design.md  2026-06-30-open-source-migration-design.md  2026-06-30-prediction-serving-dashboard-design.md  2026-07-02-paper-trading-design.md
gold/: indicators.py  run.py  sentiment_features.py
ingestion/: binance.py  crypto_news.py  cryptopanic.py  kraken.py  reddit.py  run.py
ml/: dataset.py  evaluate.py  explain.py  labels.py  predict.py  run.py  train.py
paper_trading/: trade.py
scripts/: verify_gcp.py
silver/: ohlcv.py  run.py  sentiment.py
tests/adapters/: test_bigquery_warehouse.py  test_llm.py  test_model_registry.py  test_supabase_warehouse.py  test_warehouse.py
tests/app/: test_api.py  test_pnl.py  test_positions.py
tests/gold/: test_indicators.py  test_run.py  test_sentiment_features.py
tests/ingestion/: test_binance.py  test_crypto_news.py  test_cryptopanic.py  test_kraken.py  test_reddit.py  test_run.py
tests/ml/: test_dataset.py  test_evaluate.py  test_explain.py  test_labels.py  test_predict.py  test_run.py  test_train.py
tests/paper_trading/: test_trade.py
tests/silver/: test_ohlcv.py  test_run.py  test_sentiment.py
