[project]
name = "crypto-edge"
version = "0.1.0"
description = "Personal crypto trading signal platform for BTC/ETH"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.40.0",
    "openai>=2.44.0",
    "requests>=2.34.2",
    "duckdb>=1.1.0",
    "pandas-ta-classic>=0.6.52",
    "plotly>=5.24.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
ml = [
    "xgboost>=2.1.0,<3.0",
    "shap>=0.46.0,<0.50.0",
    "scikit-learn>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adapters", "ingestion", "silver", "gold", "ml", "app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
